# balbutiement-alife

./: .gitignore  CLAUDE.md  LESSONS.md  README.md  comparison_notebook.ipynb  multiseed_notebook.ipynb  pyproject.toml  requirements.txt  run.py  run_multi.py
experiments/exp_drought/: config_run.json  results.json  summary.txt  timeseries.json
experiments/exp_flat/: config_run.json  results.json  summary.txt  timeseries.json
experiments/exp_perlin/: config_run.json  results.json  summary.txt  timeseries.json
experiments/multi/: aggregate.json
experiments/multi/drought_s42/: config_run.json  results.json  timeseries.json
experiments/multi/drought_s43/: config_run.json  results.json  timeseries.json
experiments/multi/drought_s44/: config_run.json  results.json  timeseries.json
experiments/multi/drought_s45/: config_run.json  results.json  timeseries.json
experiments/multi/drought_s46/: config_run.json  results.json  timeseries.json
experiments/multi/drought_s47/: config_run.json  results.json  timeseries.json
experiments/multi/drought_s48/: config_run.json  results.json  timeseries.json
experiments/multi/drought_s49/: config_run.json  results.json  timeseries.json
experiments/multi/drought_s50/: config_run.json  results.json  timeseries.json
experiments/multi/drought_s51/: config_run.json  results.json  timeseries.json
experiments/multi/flat_s42/: config_run.json  results.json  (+1 more)
results/: config_run.json  results.json  summary.txt  timeseries.json
simulation/: agent.py  config.py  environment.py  main.py  noise.py  visualization.py
(+57 files in other folders)
