[project]
name = "balbutiement-alife"
version = "0.1.0"
description = "Agent-based evolutionary simulation with implicit selection"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "jupyterlab>=4.0",
    "scipy>=1.12",
]

[project.scripts]
alife-run   = "run:main"
alife-multi = "run_multi:main"
alife-viz   = "simulation.main:main"
